src/app/pages/executable-detail/executable-detail.component.css
/* Aligner les cases à cocher horizontalement */
.row {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  margin-bottom: 16px; /* Espacement entre les groupes de champs */
}

.col {
  flex: 1;
}

/* Ajouter un espacement entre les champs */
.mat-form-field {
  margin-right: 16px; /* Espacement horizontal entre les champs */
  width: 48%; /* Largeur des champs (ajustez selon vos besoins) */
}

/* Styles pour les images de prévisualisation */
.image-preview-cover img {
  max-width: 100%;
  height: auto;
  margin-top: 8px; /* Espacement vertical entre l'input et l'image */
  margin: 0 auto; /* Pour occuper toute la largeur disponible */
  display: flex;
  flex-direction: column-reverse; /* Les éléments sont empilés en colonne, l'image en bas */
  align-items: stretch; /* Les éléments s'étirent pour occuper toute la largeur */
}
/* Styles pour les images de prévisualisation */
.image-preview-logo img {
  max-width: 100%;
  height: auto;
  margin-top: 8px; /* Espacement vertical entre l'input et l'image */
  margin: 0 auto; /* Pour occuper toute la largeur disponible */
  display: flex;
  flex-direction: column-reverse; /* Les éléments sont empilés en colonne, l'image en bas */
  align-items: stretch; /* Les éléments s'étirent pour occuper toute la largeur */
}
/* Styles pour les images de prévisualisation */
.image-preview-hero img {
  max-width: 98%;
  height: 100%;
  margin-top: 8px; /* Espacement vertical entre l'input et l'image */
  margin: 0 auto; /* Pour occuper toute la largeur disponible */
  display: flex;
  flex-direction: column-reverse; /* Les éléments sont empilés en colonne, l'image en bas */
  align-items: stretch; /* Les éléments s'étirent pour occuper toute la largeur */
}

.example-full-width {
  width: 80%;
  margin: 0 auto; /* Pour occuper toute la largeur disponible */
}
.example-full-width-image {
  width: 80%;
  margin: 0 auto; /* Pour occuper toute la largeur disponible */
  display: flex;
  align-items: stretch; /* Les éléments s'étirent pour occuper toute la largeur */
}

.image-container {
  display: flex;
  justify-content: center; /* Centre l'image horizontalement */
  align-items: center; /* Centre l'image verticalement */
}

/* Styles optionnels pour améliorer l'apparence du formulaire */
.example-form {
  display: flex;
  flex-direction: column;
  /*max-width: 400px;*/ /* Largeur maximale du formulaire (ajustez selon vos besoins) */
  margin: 0 auto;
}

/* Styles pour le conteneur de recherche */
.search-container {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

/* Styles pour les boutons de recherche */
button {
  margin-left: 10px;
}

/* Styles pour la zone de résultats */
.results-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

/* Styles pour la grille de résultats */
.result-grid {
  display: grid;
  grid-template-columns: repeat(5, 1fr); /* 4 colonnes égales */
  gap: 10px; /* Espacement entre les résultats */
  background-color:transparent;
}

/* Styles pour chaque résultat dans la grille */
.result {
  border: 1px solid #ccc;
  border-radius: 5px;
  /*  width:100%;*/
  height: 100%;
  background-color: transparent;
}
/* Styles pour chaque résultat dans la grille */
.custom-card {
  margin: 0px;
  padding: 0px;
/*  width: 100%;*/
  height: 100%;
}

/* Styles pour le bouton de fermeture */
button {
  margin-top: 10px;
}

/* Styles pour le nom (name) */
.name {
  font-size: 150%; /* Taille de police 150% par rapport à l'id */
  margin-top: 10px; /* Espacement entre l'id et le nom */
}

/* Styles pour l'année (year) */
.year {
  font-size: 24px; /* Taille de police identique à l'id */
  margin-top: 5px; /* Espacement entre le nom et l'année */
}

/* Styles pour la liste horizontale de cartes */
.horizontal-card-list {
  display: flex; /* Affichage horizontal */
  flex-direction: row; /* Affichage horizontal */
  overflow-x: auto; /* Défilement horizontal si nécessaire */
  max-width: 100%; /* Pour permettre le défilement horizontal */
  height: 300px;
  padding: 0px;
  background-color: transparent;
}

/* Assurez-vous que les cartes ont une largeur fixe pour un alignement uniforme */
mat-list-item {
  width: 200px; /* Largeur fixe des cartes (ajustez selon vos besoins) */
  height: 300px; /* Définissez la même hauteur que le conteneur */
  padding: 0px;
  margin: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: transparent;
}

img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover; /* Ajustement de l'image pour conserver le ratio 2/3 */
}

